# lsa

./: .gitignore  README.md  global-rules.md  pyproject.toml
docs/: ARCHITECTURE.md  OVERVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  lsa_summary_2026-01-27.md
lsa/: __init__.py  cli.py  config.py
lsa/analysis/: __init__.py  external_signals.py  planner.py
lsa/changedocs/: __init__.py  context.py  draft.py  generate_cab.py  render.py
lsa/db/: __init__.py  connection.py
lsa/graph/: builder.py  call_parser.py
lsa/output/: __init__.py  (+4 more)
scripts/: .env.example  lsa-snap.sh  lsa-workspace.sh  lsa_config.sh  mk_snap_and_scan.sh  mk_ticket_ws.sh  setup.sh
tests/: test_changedocs.py  test_cli_search.py  test_db_transactions.py  test_deep_prompt.py  test_incidents.py  test_message_codes.py  test_planner.py  test_redactor.py  test_web_server.py  test_wrapper_noise.py
tools/lsa/: pyproject.toml
tools/lsa/lsa/: __init__.py  cli.py  config.py
tools/lsa/lsa/analysis/: __init__.py  hypotheses.py  planner.py  similarity.py
tools/lsa/lsa/db/: schema.py
tools/lsa/lsa/graph/: __init__.py  builder.py  call_parser.py  matching.py
tools/lsa/lsa/output/: context_pack.py  deep_prompt.py  mermaid.py  prompt_pack.py
tools/lsa/lsa/parsers/: __init__.py  history_parser.py  log_parser.py  patterns.py  pdf_parser.py  procs_parser.py
tools/lsa/lsa/rules/: __init__.py
tools/lsa/lsa/utils/: __init__.py  paths.py
tools/lsa/tests/: __init__.py  test_context_pack.py  test_deep_prompt.py  test_external_signals.py  test_import_codes.py  test_mermaid.py  test_planner.py
(+92 files in other folders)
